# danse

./: .gitignore  .goreleaser.yml  Cargo.toml  Makefile  README.md  cache.go  client.go  config.go  config.sample.toml  dns.go  dnscrypt_client.go  doh_client.go  dot_client.go  go.mod  go.sum  main.go  tls.go
src/: client.rs  main.rs
src/client/: resolvers.rs
