[package]
name = "danse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["rt-multi-thread", "net", "sync", "macros"] }
trust-dns-proto = "0.20.2"
reqwest = { version = "0.11.3", features = ["rustls-tls", "trust-dns"], default-features = false }
bytes = "1"
config = { version = "0.11", features = ["toml"] }
lru = "0.6.5"
chrono = "0.4"
base64 = "0.13.0"
